--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=BIZ+UDGothic:wght@400;700&family=Prompt:wght@200;400&family=Roboto+Serif:wght@400;500&display=swap" rel="stylesheet">
-    <title>Vite App</title>
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+
+<title>Vite App</title>
   </head>
   <body>
     <div id="app"></div>
